fix modal z-index

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,6 +13,10 @@ table {
     }
 }
 
+.MuiModal-root {
+    z-index: 2500;
+}
+
 .Modal {
     position: absolute;
     top: 50%;
